--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /.next/
 /out/
 
+# sanity
+sanity/node_modules
+
 # production
 /build
 
@@ -34,3 +37,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.vercel
