--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/react-loader": "^1.9.17",
+    "@sanity/vision": "^3.41.1",
+    "framer-motion": "^11.1.7",
+    "next": "14.2.3",
+    "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hook-form": "^7.51.4",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^6.16.0",
+    "sanity": "^3.41.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.38",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5"
   }
 }
